# demo_project_eosc

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
demo_project_eosc/: api.py
demo_project_eosc/tests/: test_api.py
