# -*- coding: utf-8 -*-
[metadata]
name = demo_project_eosc
summary = A DEEP Template of Cookicutter to use with Model API on EOSC
description-file =
    README.md
author = Adeem Adil Khatri
author-email = adil.khatri@ug.bilkent.edu.tr
version = 0.0.1
license = MIT
home-page = https://github.com/adeemadil/demo_project_eosc
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    demo_project_eosc

[entry_points]
deepaas.v2.model =
    demo_project_eosc = demo_project_eosc.api
